--- a/Angular-Project/src/app/app.component.html
+++ b/Angular-Project/src/app/app.component.html
@@ -1,17 +1,19 @@
 <h1>Library Managment</h1><hr>
 
-<!-- <app-interaction-c (childEvent)="message=$event" [parentData]="name"></app-interaction-c>
-<div style="text-align: center;">
-    <h1>Welcome {{message}}</h1>
-</div> -->
-
 <!-- <app-add-student></app-add-student> -->
-
-<!-- <app-test></app-test> -->
 
 <!-- <app-dynamic-table></app-dynamic-table> -->
 
-<app-log-in></app-log-in>
+<!-- <app-interaction-c (childEvent)="message=$event" [parentData]="name"></app-interaction-c>
+<div style="text-align: center;">
+   <h1>Welcome {{message}}</h1>
+</div> -->
+
+<!-- <app-log-in></app-log-in> -->
+
+<!-- <app-test></app-test> -->
+
+<app-template-driven-form></app-template-driven-form>
 
 
 
