Modified Practice Component

--- a/Angular-Project/src/app/app.component.html
+++ b/Angular-Project/src/app/app.component.html
@@ -11,10 +11,11 @@
 
 <!-- <app-log-in></app-log-in> -->
 
-<!-- <app-test></app-test> -->
+<app-test></app-test>
 
-<app-template-driven-form></app-template-driven-form>
+<!-- <app-template-driven-form></app-template-driven-form> -->
 
+<!-- <app-practice></app-practice> -->
 
 
 
