--- a/Angular-Project/src/app/app.component.html
+++ b/Angular-Project/src/app/app.component.html
@@ -11,11 +11,15 @@
 
 <!-- <app-log-in></app-log-in> -->
 
-<app-test></app-test>
+<!-- <app-test></app-test> -->
 
 <!-- <app-template-driven-form></app-template-driven-form> -->
 
+<!-- <app-reactive-form></app-reactive-form> -->
+
 <!-- <app-practice></app-practice> -->
+
+<!-- <app-learnvern></app-learnvern> -->
 
 
 
