--- a/Angular-Project/src/app/test/test.component.html
+++ b/Angular-Project/src/app/test/test.component.html
@@ -1,6 +1,7 @@
 <!-- *********************Interpolation Binding********************* -->
 <h2>Interpolation Binding</h2>
-<h3>My Name Is {{title}}</h3><br><hr>
+<h3>My Name Is {{title}}</h3><br>
+<button (click)="OnClick()">Click</button><hr>
 
 <!-- *********************Property Binding********************* -->
 <h2>Property Binding</h2>
