--- a/Angular-Project/src/app/practice/practice.component.css
+++ b/Angular-Project/src/app/practice/practice.component.css
@@ -25,7 +25,7 @@ input[type=text], select {
   }
 
   
-  input[type=submit]{
+  button{
       width: 100%;
       font-size: 25px;
       color: rgb(141, 4, 111);
@@ -36,8 +36,8 @@ input[type=text], select {
       border-radius: 50px;
     }
     
-    input[type=submit]:hover{
-        /* background-color:hotpink; */
+    button:hover{
+        background-color:hotpink;
         cursor: pointer;
         opacity: 1;
     }
@@ -67,3 +67,6 @@ input[type=text], select {
             
           }
     
+     input.ng-invalid.ng-touched{
+         border-color: red;
+     }
