--- a/Angular-Project/src/app/template-driven-form/template-driven-form.component.css
+++ b/Angular-Project/src/app/template-driven-form/template-driven-form.component.css
@@ -25,7 +25,7 @@ input[type=text], select {
   }
 
   
-  input[type=submit]{
+  button{
       width: 100%;
       font-size: 25px;
       color: brown;
@@ -36,7 +36,7 @@ input[type=text], select {
       border-radius: 50px;
     }
     
-    input[type=submit]:hover{
+    button:hover{
         /* background-color:hotpink; */
         cursor: pointer;
         opacity: 1;
